update build and demo cokleisli composition